View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024941 | Community | OCCT:Coding | public | 2014-05-21 09:12 | 2014-11-11 12:52 |
Reporter | laurie123 | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Product Version | 6.7.1 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024941: Need whitespace between adjacent string literals for CLang in c++11 mode | ||||
Description | The files Interface_Version.hxx and STEPControl_Controller.cxx use the macro OCC_VERSION_STRING butting up against a string literal. CLang in c++11 mode vehemently rejects this. | ||||
Steps To Reproduce | compile with Xcode 5.1.1 setting c++11 mode true. (on cmd line, clang -std=c++11 -stdlib=libc++) | ||||
Additional information and documentation updates | This (trivial) problem has been present since at least OCC6.5.4, and is the only change I *must* make to the source tree to get it to compile in c++11 mode. I am not using -Werror -Wall -Weverything, though. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Fix pushed to branch CR24941, please review |
|
Please test the patch. |
|
Note that similar fix is pushed to products repository, in the same-name branch CR24941 |
|
(pls can you fix the typo in the summary: predecessor→preprocessor; I don't see a way to do it myself) |
|
I have changed description to refer to "adjacent string literals"; their concatenation seems to be done by C++ compiler itself, not by preprocessor |
|
thanks and yes you are right on that :) |
|
Branch will be tested with CR24897. |
occt: master cae42e78 2014-05-21 05:43:12 Committer: apn Details Diff |
0024941: Need whitespace between predecessor tokens for CLang in c++11 mode Whitespace added between macro OCC_VERSION_STRING and string literals when concatenation of string literals is used. |
Affected Issues 0024941 |
|
mod - src/Interface/Interface_Version.hxx | Diff File | ||
mod - src/STEPControl/STEPControl_Controller.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-05-21 09:12 | laurie123 | New Issue | |
2014-05-21 09:12 | laurie123 | Assigned To | => kgv |
2014-05-21 09:44 | abv | Note Added: 0029423 | |
2014-05-21 09:44 | abv | Assigned To | kgv => laurie123 |
2014-05-21 09:44 | abv | Status | new => resolved |
2014-05-21 17:06 | kgv | Note Added: 0029447 | |
2014-05-21 17:06 | kgv | Assigned To | laurie123 => bugmaster |
2014-05-21 17:06 | kgv | Status | resolved => reviewed |
2014-05-21 17:07 | kgv | Target Version | => 6.8.0 |
2014-05-21 17:17 | abv | Note Added: 0029448 | |
2014-05-22 11:01 | bugmaster | Assigned To | bugmaster => apn |
2014-05-23 10:12 | laurie123 | Note Added: 0029481 | |
2014-05-23 10:56 | abv | Note Added: 0029482 | |
2014-05-23 10:56 | abv | Summary | Need whitespace between predecessor tokens for CLang in c++11 mode => Need whitespace between adjacent string literals for CLang in c++11 mode |
2014-05-23 10:59 | laurie123 | Note Added: 0029483 | |
2014-05-23 14:24 | apn | Note Added: 0029494 | |
2014-05-26 17:58 | apn | Test case number | => Not needed |
2014-05-26 17:58 | apn | Assigned To | apn => bugmaster |
2014-05-26 17:58 | apn | Status | reviewed => tested |
2014-05-30 12:59 | apn | Changeset attached | => occt master cae42e78 |
2014-05-30 12:59 | apn | Assigned To | bugmaster => apn |
2014-05-30 12:59 | apn | Status | tested => verified |
2014-05-30 12:59 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |