0024941: Need whitespace between predecessor tokens for CLang in c++11 mode

Whitespace added between macro OCC_VERSION_STRING and string literals when concatenation of string literals is used.