src/Interface/Interface_Version.hxx
@@ -12,8 +12,8 @@
 // commercial license or contractual agreement.
 
 #include <Standard_Version.hxx>
-#define XSTEP_PROCESSOR_VERSION "Open CASCADE %s processor "OCC_VERSION_STRING
-#define XSTEP_SYSTEM_VERSION    "Open CASCADE "OCC_VERSION_STRING
+#define XSTEP_PROCESSOR_VERSION "Open CASCADE %s processor " OCC_VERSION_STRING
+#define XSTEP_SYSTEM_VERSION    "Open CASCADE " OCC_VERSION_STRING
 #define XSTEP_Config            OCC_VERSION_STRING
 #define XSTEP_ULNames           OCC_VERSION_STRING
 
